[gd_scene load_steps=5 format=2]

[ext_resource path="res://Root.gd" type="Script" id=1]
[ext_resource path="res://Pause/Menu.tscn" type="PackedScene" id=2]
[ext_resource path="res://NPCs/Shop.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Backgrounds/forest2.png" type="Texture" id=4]

[node name="Root" type="Node2D"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Menu_Area" type="CanvasLayer" parent="."]

[node name="SubMenus" type="Node2D" parent="Menu_Area"]
visible = false

[node name="Menu" parent="Menu_Area" instance=ExtResource( 2 )]
visible = false
focus_mode = 2

[node name="Shop" parent="Menu_Area" instance=ExtResource( 3 )]
visible = false

[node name="Camera2D" type="Camera2D" parent="Menu_Area"]

[node name="Timer" type="Timer" parent="."]
pause_mode = 2
autostart = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -117.291, -456.82 )
scale = Vector2( 4.40551, 4.37599 )
texture = ExtResource( 4 )

[node name="Effects" type="Node2D" parent="."]
editor/display_folded = true
z_index = 50
z_as_relative = false

[node name="Corruption" type="ColorRect" parent="Effects"]
margin_left = -2353.0
margin_top = -2059.0
margin_right = 2205.0
margin_bottom = 1263.0
color = Color( 0.0196078, 0, 0.0588235, 0 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
